# SPB-History-TG-bot

./: .flake8  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: __init__.py  test_route.py
data/routes/: route1.py  route2.py  test_route.py
src/: __main__.py  config.py  loader.py  main.py
src/callbacks/: __init__.py  checkpoint.py  connector.py  random_value.py  route.py  start_route.py
src/callbacks/factories/: start_route.py
src/factories/: checkpoint.py  connector.py
src/handlers/: __init__.py  echo.py  random.py  start.py
src/keyboards/: __init__.py  all_routes.py  checkpoint_arrival.py  checkpoint_next.py
src/libs/: _renderable.py  checkpoint.py  checkpoints_connector.py  route.py  typing.py
src/utils/: load_from_static.py
